2002-01-04 Richard Frith-Macdonald <rfm@gnu.org>

	* documentation.make: revert to old autogsdoc rules as standard,
	keeping new ruleset as 'experimental' ... should allow people to
	use autogsdoc stuff reliably using the release Adam is planning
	to do real soon and pending us getting the new rules working
	properly.
	Retain checks for libxml for cleaner handling of case where it is
	not present.
	Modify experimental code to have html files depend on the igsdoc
	file so that their cross references get set up correctly.
	Outstanding requirements for experimental rules ...
	need to get dependency on .m files working and probably other things
	(certainly performance improvements needed).

Fri Jan  4 15:37:19 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* documentation.make: autogsdoc rules - rewritten.

Fri Jan  4 08:09:26 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* target.make (SHARED_LIBEXT): For HP-UX IA64, use .so rather than
	.sl as the shared library extension (Patch from Dominique Dumont
	<domi@komarr.grenoble.hp.com>).

2001-12-29  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.NetBSD: Typos.
	* Documentation/faq.texi: Update.
	* Documentation/machines.texi: Likewise.

2001-12-26  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin1): Use NeXT Compiler when using NeXT
	runtime. 

Tue Dec 25 08:57:37 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* which_lib.c (stripstr): Removed check for len == 0.

Fri Dec 21 19:03:49 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* documentation.make ($(INTERNAL_doc_NAME)): New target for
	AGSDOC_FILES.
	(generate-autogsdoc): Depend on it.
	
Thu Dec 20 23:27:42 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make: Disable the check on PATH if we are running on an
	Apple system (Requested by Helge Hess).

Mon Dec 17 11:10:23 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* bundle.make (internal-bundle-install): Another tar option update
	for portability: create a temporary exclude file and use X old